--- a/index.html
+++ b/index.html
@@ -13,16 +13,25 @@
       <img class="logo" src="./WhatsApp Image 2024-01-12 at 11.55.08 AM.png" alt="">
     </div>
     <nav class="navBar">
-      <a href="">Ana səhifə</a>
-      <a href="">Haqqımızda</a>
-      <a href="">Missiya</a>
-      <a href="">Əlaqə</a>
+      <ul>
+        <li>Ana Sehife</li>
+        <li>Haqqimizda</li>
+        <li>Elaqe</li>
+        <li class="more">Daha cox
+          <div class="drop">
+            <a href="">Melumatlar</a>
+            <a href="">Xidmetler</a>
+            <a href="">Missiyamiz</a>
+          </div>
+        </li>
+      </ul>
     </nav>
     <div class="iconBox">
       <a href=""><i class="fa-solid fa-heart"></i></a>
       <a href=""><i class="fa-solid fa-basket-shopping"></i></a>
       <a href=""><i class="fa-solid fa-user"></i></a>
     </div>
+    <i class="fa-solid fa-bars aaa"></i>
   </header>
   <main>
     <h1>Best Seller</h1>
